# yast-tv

./: .cvsignore  .gitignore  TODO  yast2-tv.spec.in
agents/: cfg_lirc.scr  modprobe_tv.scr  xawtvrc.scr
data/: .cvsignore  .gitignore  CARDLIST.bttv  CARDLIST.cx88  CARDLIST.saa7134  CARDLIST.saa7164  Makefile.am  README  create_tuner_db  create_tuner_db.rb  create_tv_db  create_tv_db.rb  tv_cards-lirc_gpio.ycp  tv_dvbcards.ycp  tv_dvbfirmware.ycp
doc/: Makefile.am  modinfo-video.txt  tv-detect.ui  tv-features.md  tv-features.txt  tv-manual-details.ui  tv-manual.ui  tv-specification.html  tv-specification.md  tv.dia  tv.ui
doc/autodocs/: .gitignore  Makefile.am
package/: yast2-tv.changes  yast2-tv.spec
src/: Makefile.am  ModulesComments.ycp  Tv.ycp  UniqueKeys.ycp  helps.ycp  irc.ycp  irc_ui.ycp  misc.ycp  proposal_tv.ycp  tv.desktop  tv.y2cc  tv.ycp  tv_auto.ycp  tv_proposal.ycp  tv_write.ycp  ui.ycp
src/clients/: irc.rb  tv.rb  tv.ycp  tv_auto.rb  tv_proposal.rb  tv_proposal.ycp  tv_write.rb
src/data/: tv_dvb_cards.yml  tv_dvb_firmware.yml  tv_dvbfirmware.ycp  tv_lirc_gpio.yml
src/desktop/: tv.desktop
src/include/tv/: helps.rb  irc_ui.rb  misc.rb  ui.rb
src/modules/: ModulesComments.rb  Tv.rb
testsuite/: .gitignore
testsuite/tests/: CmpParameters.out  CmpParameters.rb  CmpParameters.ycp  ModulesCommentsExtractFromComment.rb  ModulesCommentsStoreToComment.rb  ModulesCommentsStoreToComment.ycp  TvCardAddCurrent.out  TvCardAddCurrent.rb  TvCardAddCurrent.ycp  TvCardGet.out  TvCardGet.rb  TvCardGet.ycp  TvCardRemove.out  TvCardRemove.rb  TvCardRemove.ycp  TvCardReplaceWithCurrent.out  TvCardReplaceWithCurrent.rb  TvCardReplaceWithCurrent.ycp  TvCardsAsItems.out  TvCardsAsItems.rb  TvCardsAsItems.ycp  TvCardsDBVendorGetCards.out  TvCardsDBVendorGetCards.rb  TvCardsDBVendorGetCards.ycp  TvCardsDBVendorsAsItems.out  TvCardsDBVendorsAsItems.rb  TvCardsDBVendorsAsItems.ycp  TvCardsUniqueKeys.out  TvCardsUniqueKeys.rb  TvCardsUniqueKeys.ycp  TvDetect.out  TvDetect.rb  TvDetect.ycp  TvDetectedCardsAsItems.out  TvDetectedCardsAsItems.rb  (+41 more)
tv/: RPMNAME
tv/data/: README  (+3 more)
(+37 files in other folders)
