#
# Makefile.am for y2c_tv/src
#
# $Id$
#

yncludedir = @yncludedir@/tv

client_DATA =			\
	tv.ycp			\
	tv_auto.ycp		\
	tv_proposal.ycp		\
	tv_write.ycp

ynclude_DATA =			\
	helps.ycp		\
	misc.ycp		\
	ui.ycp

config_DATA =			\
	tv.y2cc

module_DATA =			\
	Tv.ycp			\
	UniqueKeys.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
